--- a/F1Server/F1Server/F1Server.csproj
+++ b/F1Server/F1Server/F1Server.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ConstructorStandings.cs" />
     <Compile Include="Models\DriverStandings.cs" />
     <Compile Include="Models\RaceData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
